# AndroLua

app/: CMakeLists.txt  build.gradle
app/src/debug/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lua-sdk/: .gitignore  CHANGE_LOG.md  gradle.properties
lua-sdk/src/debug/: AndroidManifest.xml
lua-sdk/src/main/: AndroidManifest.xml
